fixed overflow issues

--- a/host/notebook/src/Landing.css
+++ b/host/notebook/src/Landing.css
@@ -37,6 +37,7 @@ body {
 }
 
 #landing {
+	overflow: hidden;
     main {
         max-width: 1200px;
         /* min-width: 1000px; */
